--- a/VoipApp/Info.plist
+++ b/VoipApp/Info.plist
@@ -50,5 +50,9 @@
 	</array>
 	<key>NSContactsUsageDescription</key>
 	<string>VoipApp needs to access your contacts</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>You can choose a photo from your gallery and use it as your avatar</string>
+	<key>NSCameraUsageDescription</key>
+	<string>VoipApp will use your camera to take a photo to use it as your avatar</string>
 </dict>
 </plist>
